--- a/package.json
+++ b/package.json
@@ -1,27 +1,43 @@
 {
-  "name": "budget_app",
-  "version": "1.0.0",
-  "description": "Application for tracking budgeting",
-  "main": "app.js",
-  "scripts": {
-    "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Aryan2327/budget-app.git"
-  },
-  "author": "Aryan Chaudhary",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Aryan2327/budget-app/issues"
-  },
-  "homepage": "https://github.com/Aryan2327/budget-app#readme",
+  "name": "budget-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "express": "^4.18.2"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.66",
+    "@types/react": "^18.2.41",
+    "@types/react-dom": "^18.2.17",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.9.3",
-    "typescript": "^5.3.2"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
