--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.66",
     "@types/react": "^18.2.41",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.2.17",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
+    "react-datepicker": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
