Wrote the rest of the services in the compose file such that all services are running as containers, and can communicate over a user-defined bridge network.
TODO: Create a well-defined schema for the database, and make submitting
expenses persists data to the database (there should be a mount on the
host fs that stores backups of the pg database)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@
 services:
   postgres:
     image: "postgres:16.1-bullseye"
+    container_name: postgres-db
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
@@ -9,3 +10,31 @@ services:
       - ./init_db.sh:/docker-entrypoint-initdb.d/init_db.sh
     ports:
       - 5432:5432
+    networks:
+      - backend
+
+  webapp:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    container_name: webapp
+    command: ["npm", "start"]
+    ports:
+      - 3000:3000
+    networks:
+      - backend
+  
+  api:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    container_name: api
+    command: ["npm", "run", "start-api"]
+    ports:
+      - 3001:3001
+    networks:
+      - backend
+
+networks:
+  backend:
+    driver: bridge
