--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - POSTGRES_PASSWORD=password
     volumes:
       - ./init_db.sh:/docker-entrypoint-initdb.d/init_db.sh
-      - ./data:/var/lib/postgresql/data
+      - /var/lib/pgsql/data:/var/lib/postgresql/data
     ports:
       - 5432:5432
     networks:
